# IronMC

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  input.json  plan-fable-review.md  plan-gpu.md
crates/apps/cube-spike/: Cargo.toml
crates/apps/cube-spike/src/: cube.rs  lib.rs  main.rs  philox.rs
crates/apps/rmc-frohlich/: Cargo.toml  README.md  input.json
crates/apps/rmc-frohlich/src/: app.rs  config.rs  diagram.rs  fourier.rs  lib.rs  main.rs  measurement.rs  physics.rs  sanity.rs  update_stats.rs
crates/apps/rmc-frohlich/src/flat/: batched.rs  mod.rs  philox.rs  updates.rs
crates/apps/rmc-frohlich/src/gpu/: kernel.rs  mod.rs  physics.rs  run.rs  state.rs
crates/apps/rmc-frohlich/src/updates/: mod.rs  phonon.rs
crates/apps/rmc-frohlich/tests/: app.rs  batched_estimators.rs  config.rs  diagram_ops.rs  flat_diagram.rs  flat_ratio_parity.rs  fourier.rs  measurement.rs
crates/apps/rmc-minimal/: README.md
crates/apps/rmc-minimal/src/: lib.rs  main.rs
crates/rmc/: Cargo.toml
crates/rmc-core/: Cargo.toml
crates/rmc-core/benches/: hot_path.rs
crates/rmc-core/src/: error.rs  lib.rs  merge.rs  scalar.rs
crates/rmc-core/src/mc/: kernel.rs  mod.rs  parallel.rs  progress.rs  run.rs  runner.rs  sets.rs  sink.rs  traits.rs
crates/rmc-core/src/random/: mod.rs  samples.rs  seed_source.rs
crates/rmc-core/tests/: foundation_scalar.rs  ising_validation.rs  mc_measurement_tuple.rs  mc_parallel.rs  mc_run.rs  mc_sink.rs  mc_stateful.rs  properties.rs  random_samples.rs  random_seed_source.rs  serde_roundtrip.rs
crates/rmc-frohlich/: Cargo.toml
crates/rmc-frohlich/src/: app.rs  config.rs  lib.rs  measurement.rs  update_stats.rs
crates/rmc-frohlich/src/updates/: mod.rs
crates/rmc-frohlich/tests/: fourier.rs  measurement.rs  sampling.rs  updates.rs
crates/rmc-grids/: Cargo.toml
crates/rmc-grids/src/: lib.rs
crates/rmc-grids/tests/: grids_1d.rs  grids_nd.rs  serde_roundtrip.rs
crates/rmc-io/: Cargo.toml
crates/rmc-io/src/: lib.rs
crates/rmc-io/tests/: checkpoint_json.rs
crates/rmc-minimal/: Cargo.toml
crates/rmc-minimal/src/: lib.rs  main.rs
crates/rmc-numeric/: Cargo.toml
crates/rmc-numeric/src/: lib.rs
crates/rmc-numeric/tests/: cubic_spline_interpolation.rs  linear_interpolation.rs  polynomial_interpolation.rs  quadrature.rs  serde_roundtrip.rs
crates/rmc-stats/: Cargo.toml
crates/rmc-stats/src/: lib.rs
crates/rmc-stats/tests/: binned_measurement.rs  merge_properties.rs  serde_roundtrip.rs  stats_resampling.rs  stats_scalar_autocorrelation.rs  stats_scalar_covariance.rs  stats_scalar_moments.rs  stats_vector.rs
crates/rmc/examples/: ising_2d.rs  named_results.rs  random_walk.rs  sink_results.rs
crates/rmc/src/: lib.rs
crates/rmc/tests/: facade_features.rs
fixtures/: bench-frohlich.json
results/: config.json  fft.json  manifest.json  selfenergy.json  selfenergy_exact.json  summary.json  summary.txt
runs/test-perf-froehlich/alpha-1/: config.json  fft.json  input.json  manifest.json  selfenergy.json  selfenergy_exact.json  summary.json  summary.txt
runs/test-perf-froehlich/alpha-5/: config.json  fft.json  input.json  manifest.json  selfenergy.json  selfenergy_exact.json  summary.json  summary.txt
