[package]
name = "rmc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Greenfield Rust Monte Carlo core"
license.workspace = true

[features]
default = []
serde = [
    "dep:serde",
    "num-complex/serde",
    "rand_core/serde1",
    "rand_xoshiro/serde1",
]

[dependencies]
indicatif.workspace = true
num-complex.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_xoshiro.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
serde_json.workspace = true

[[bench]]
name = "hot_path"
harness = false
