[package]
name = "rmc-grids"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "One- and multi-dimensional grids for rmc"
license.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
