[package]
name = "rmc-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Checkpoint and restart IO helpers for rmc"
license.workspace = true

[features]
default = []

[dependencies]
bincode = "1"
rmc-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand_core.workspace = true
rmc-core = { workspace = true, features = ["serde"] }
