[package]
name = "rmc-numeric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Numerical utilities for rmc"
license.workspace = true

[features]
default = []
serde = ["dep:serde", "rmc-grids/serde"]

[dependencies]
rmc-grids.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
