[package]
name = "rmc-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mergeable statistical accumulators for rmc"
license.workspace = true

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra.workspace = true
rmc-core.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true
