[package]
name = "rmc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Facade crate for the greenfield Rust Monte Carlo framework"
license.workspace = true

[features]
default = ["stats", "grids"]
grids = ["dep:rmc-grids"]
stats = ["dep:rmc-stats"]
serde = [
    "rmc-core/serde",
    "rmc-grids?/serde",
    "rmc-numeric?/serde",
    "rmc-stats?/serde",
]
numeric = ["grids", "dep:rmc-numeric"]
io = ["serde", "dep:rmc-io"]
mpi = []
hdf5 = []

[dependencies]
rmc-core.workspace = true
rmc-grids = { workspace = true, optional = true }
rmc-io = { workspace = true, optional = true }
rmc-numeric = { workspace = true, optional = true }
rmc-stats = { workspace = true, optional = true }

[[example]]
name = "sink_results"
required-features = ["io"]
