[package]
name = "cube-spike"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
cubecl = { version = "=0.10.0", default-features = false, features = ["std", "stdlib"], optional = true }

[features]
default = []
cubecl-cpu = ["dep:cubecl", "cubecl/cpu"]
cubecl-hip = ["dep:cubecl", "cubecl/hip"]
cubecl-cuda = ["dep:cubecl", "cubecl/cuda"]
